# gitexplorer

./: .gitignore  README.md  pyproject.toml
src/gitexplorer/: __main__.py  commit_slider.py  diff_view.py  file_search.py  file_tree_panel.py  find_bar.py  git_backend.py  main_window.py  project_search.py  syntax_highlighter.py  workspace.py
